INPUTDATA = ts_mm_5years hl_l19.grb t21_geosp_tsurf.grb bathy4.grb pl_data.grb

TIMSTAT_REF  = timmin_ref timmax_ref timsum_ref timavg_ref timmean_ref timstd_ref timstd1_ref timvar_ref timvar1_ref
SPECTRAL_REF = sp2gp_ref sp2gpl_ref gp2sp_ref gp2spl_ref
VERTINT_REF  = ml2pl_ref
REMAP_REF    = n16_bic_ref n16_bil_ref n16_con_ref n16_laf_ref n16_nn_ref  n32_bic_ref n32_bil_ref n32_con_ref n32_laf_ref n32_nn_ref
SELECT_REF   = select1_ref select2_ref select3_ref select4_ref select5_ref

EXTRA_DIST = $(INPUTDATA) $(TIMSTAT_REF) $(SPECTRAL_REF) $(VERTINT_REF) $(REMAP_REF) $(SELECT_REF)
